# tinct-rs

./: Cargo.toml  LICENSE  README.md
tinct/: Cargo.toml
tinct-cli/: Cargo.toml
tinct-cli/src/: main.rs  render.rs
tinct/data/: palettes.json
tinct/examples/: seed.rs
tinct/src/: color.rs  compat.rs  extract.rs  lib.rs  metrics.rs  output.rs  palette.rs  scheme.rs  terminal.rs  transform.rs
tinct/tests/: golden.rs  transform_golden.rs
tinct/tests/fixtures/: color-3A6EA5-dark-content.scss  color-3A6EA5-dark-expressive.scss  color-3A6EA5-dark-neutral.scss  color-3A6EA5-dark-vibrant.scss  color-3A6EA5-light-content.scss  color-3A6EA5-light-expressive.scss  color-3A6EA5-light-neutral.scss  color-3A6EA5-light-vibrant.scss  color-B52755-dark-tonalspot.scss  full-22AA77-dark-content.scss  full-22AA77-dark-expressive.scss  full-22AA77-dark-fidelity.scss  full-22AA77-dark-fruit-salad.scss  full-22AA77-dark-monochrome.scss  full-22AA77-dark-neutral.scss  full-22AA77-dark-rainbow.scss  full-22AA77-dark-tonal-spot.scss  full-22AA77-dark-vibrant.scss  full-22AA77-light-content.scss  full-22AA77-light-expressive.scss  full-22AA77-light-fidelity.scss  full-22AA77-light-fruit-salad.scss  full-22AA77-light-monochrome.scss  full-22AA77-light-neutral.scss  full-22AA77-light-rainbow.scss  full-22AA77-light-tonal-spot.scss  full-22AA77-light-vibrant.scss  full-B52755-dark-content.scss  full-B52755-dark-expressive.scss  full-B52755-dark-fidelity.scss  full-B52755-dark-fruit-salad.scss  full-B52755-dark-monochrome.scss  full-B52755-dark-neutral.scss  full-B52755-dark-rainbow.scss  (+15 more)
(+3 files in other folders)
